--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -2,3 +2,7 @@ public-f net.minecraft.world.gen.feature.structure.Structure field_236384_t_ #NO
 public-f net.minecraft.world.gen.settings.DimensionStructuresSettings field_236191_b_ #DEFAULTS
 public-f net.minecraft.world.gen.FlatGenerationSettings field_202247_j #STRUCTURE_FEATURES
 public-f net.minecraft.world.gen.settings.DimensionStructuresSettings field_236193_d_ #structureConfig
+
+public net.minecraft.world.gen.feature.structure.TemplateStructurePiece field_186177_b # placeSettings
+public net.minecraft.world.gen.feature.structure.TemplateStructurePiece field_186178_c # templatePosition
+public net.minecraft.world.gen.feature.structure.TemplateStructurePiece field_186176_a # template
