Slimes, immuniutieis fake player damage immuniteius

--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -6,3 +6,6 @@ public-f net.minecraft.world.gen.settings.DimensionStructuresSettings field_2361
 public net.minecraft.world.gen.feature.structure.TemplateStructurePiece field_186177_b # placeSettings
 public net.minecraft.world.gen.feature.structure.TemplateStructurePiece field_186178_c # templatePosition
 public net.minecraft.world.gen.feature.structure.TemplateStructurePiece field_186176_a # template
+
+public net.minecraft.entity.monster.SlimeEntity field_184711_bt # ID_SIZE
+public net.minecraft.entity.Entity func_226264_Z_()V # reapplyPosition
